--- a/static/style.css
+++ b/static/style.css
@@ -1,11 +1,12 @@
 .number_effect{
-    font-size: 200px;
-    font-weight: 700;
+    font-size: 500px;
+    font-weight: 1000px;
 }
 .container{
     display: flex;
     
-    margin: 100px;
+    margin: 50px;
+    margin-top: 5px;
 }
 .content{
     display: block;
