--- a/static/style.css
+++ b/static/style.css
@@ -1,17 +1,54 @@
-.number_effect{
-    font-size: 500px;
-    font-weight: 1000px;
+
+ 
+@keyframes d_digit {
+    0% {
+        transform: translateY(-100vh);
+    }
+    50%{
+        transform: translateY(-50vh);
+    }
+    100% {
+        transform: translateY(0vh);
+        
+        
+    }
 }
+.n01{
+    animation: 2s ease-out  d_digit;
+}
+.n02{
+    animation: 2.15s ease-out  d_digit;
+}
+.n03{
+    animation: 2.3s ease-out  d_digit;
+}
+.digit{
+    display: block;
+    font-size: 200px;
+    font-weight: 10000px;
+    visibility: visible;
+    
+}
+.number_effect{
+    font-size: 200px;
+    font-weight: 10000px;
+    visibility: visible;
+    
+    
+}
+
 .container{
     display: flex;
     
-    margin: 50px;
-    margin-top: 5px;
 }
-.content{
-    display: block;
-    align-items: center;
+
+#lh{
+    display: none;
 }
-.content h1{
+#lt{
+    display: none;
+}
+.content {
     font-size: 100px;
+    display: none;
 }
